--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
     <!-- body section start -->
+    <h1>Pin Generator</h1>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <div class="pin-generator half-width">
-                    <input class="form-control" type="text">
-                    <button class="generate-btn">Generate Pin</button>
+                    <input  id="pin-input"  class="form-control" type="text">
+                    <button id="btn-pin" class="generate-btn">Generate Pin</button>
                 </div>
             </div>
             <div class="col-md-6">
@@ -55,5 +56,6 @@
         
     </div>
     <!-- body section end -->
+  <script src="./assets/js/pin.js"></script>
 </body>
 </html>
