--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
             <div class="col-md-6">
                 <div class="input-section half-width">
-                    <input class="form-control" type="text">
-                    <div class="numbers">
+                    <input id="calculator-input" class="form-control" type="text">
+                    <div id="calculator" class="numbers">
                         <div class="calc-body">
                             <div class="calc-button-row">
                               <div class="button">7</div>
@@ -41,7 +41,6 @@
                               <div class="button">3</div>
                             </div>
                             <div class="calc-button-row">
-                                <div class="button">&lt;</div>
                                 <div class="button">0</div>
                                 <div class="button">C</div>
                             </div>
