--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <div class="button">C</div>
                             </div>
                             <div>
-                                <button type="submit" class="submit-btn">Submit</button>
+                                <button id="button" type="submit" class="submit-btn">Submit</button>
                                 
                             </div>
                     </div>
